--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.692Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     },
     {
         "key": "sb",
@@ -23,17 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "locale",
-        "value": "vi_VN",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     },
     {
         "key": "vpd",
@@ -59,70 +50,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "wd",
-        "value": "393x719",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61571321981294",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "fr",
-        "value": "0k5TBggQR1co0ik7P.AWWd-ptfM8P8G7BBB1roOnyAJH3qS1ae6vZNvg.Bno2aP..AAA.0.0.BnpCV4.AWWcvd8uZ20",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "xs",
-        "value": "38%3AmCoddQewOZPc2w%3A2%3A1738810745%3A-1%3A15404",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101428785%3BT%3A28980179",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2733%3Btimestamp%3A1738810752",
+        "value": "v2%3Bclient_version%3A2733%3Btimestamp%3A1738851663",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-06T02:59:17.086Z",
-        "lastAccessed": "2025-02-06T02:59:17.086Z"
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "dpr",
+        "value": "3.0234789848327637",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61571102186360",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "xs",
+        "value": "21%3A-IWjbFqsPhAZow%3A2%3A1738905570%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "fr",
+        "value": "0k5TBggQR1co0ik7P.AWVtxy3Audz_cew1CtOUvCfuPB1TeZ7kUgsRxg.Bno2aP..AAA.0.0.BnpZfp.AWXdFDvDazk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1738905584191%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
+    },
+    {
+        "key": "wd",
+        "value": "891x1631",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-07T05:20:52.698Z",
+        "lastAccessed": "2025-02-07T05:20:52.698Z"
     }
 ]
