--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261571488623051%22%3A%22Q0PqGPOo%22%2C%2261571321981294%22%3A%22PDRDW8Xa%22%7D",
+        "value": "%7B%2261571488623051%22%3A%22Q0PqGPOo%22%2C%2261571321981294%22%3A%22avn9WVYi%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.692Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.846Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "vpd",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2733%3Btimestamp%3A1738851663",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "dpr",
@@ -68,17 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
-        "key": "locale",
-        "value": "en_GB",
+        "key": "m_pixel_ratio",
+        "value": "2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "c_user",
@@ -86,43 +77,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
-    },
-    {
-        "key": "xs",
-        "value": "21%3A-IWjbFqsPhAZow%3A2%3A1738905570%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "fr",
-        "value": "0k5TBggQR1co0ik7P.AWVtxy3Audz_cew1CtOUvCfuPB1TeZ7kUgsRxg.Bno2aP..AAA.0.0.BnpZfp.AWXdFDvDazk",
+        "value": "1gwhgkC9aZgRIcSHT.AWWW_aRiPbe-yx5jhtKTKvV-0JBIl6inf0ot8g.BnpzMU..AAA.0.0.BnqgdJ.AWUTJwPWdWM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1738905584191%2C%22v%22%3A1%7D",
+        "key": "xs",
+        "value": "14%3AQRtGFA8sThFiPA%3A2%3A1739196233%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     },
     {
         "key": "wd",
-        "value": "891x1631",
+        "value": "393x719",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-07T05:20:52.698Z",
-        "lastAccessed": "2025-02-07T05:20:52.698Z"
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100427397%3BT%3A28986604",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2737%3Btimestamp%3A1739196242",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-10T14:04:10.847Z",
+        "lastAccessed": "2025-02-10T14:04:10.847Z"
     }
-]
+        ]
